[BlinkGenPropTrees] Apply replaced content clip to contents layer

Replaced contents are clipped by the content box. Normally this is not an
issue because we size the contents layer of a directly composited replaced
element to the clipped area. However in the case of a clip with rounded
corner, a clip still needs to be applied. Previously we incorrectly applied
the main layer state to its contents layer, which did not include the
rounded corner clip. This CL corrects that.

BUG=853943

Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Id9a1a10e651ff2be73d43471ce94d85daf082f67
Reviewed-on: https://chromium-review.googlesource.com/1121538
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571989}
Former-commit-id: 4725344b3549b876bb92eaf78027305784063807